atkobject: improve documentation for AtkObject::property-change

https://bugzilla.gnome.org/show_bug.cgi?id=644747